2006-10-27  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c: (bvw_bus_message_cb),
	(bacon_video_widget_open_with_subtitle), (bacon_video_widget_play):
	  Don't go through lots of trouble to catch errors and fake non-async
	  behaviour to the frontend when the frontend doesn't even check for
	  errors. In other words: skip poll_for_state_change() and handle
	  errors asynchroneously if the frontend supplies a NULL error,
	  otherwise errors may be lost in some corner cases (#361787).

2006-10-27  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_remote),
	(totem_action_handle_key_press): fix remotely setting whether to
	show the controls, and trying to use the deinterlace on/off key
	shortcut

2006-10-27  Bastien Nocera  <hadess@hadess.net>

	* src/ev-sidebar.c: (ev_sidebar_init): remove some extraneous padding
	around the sidebar pages, there's already padding outside

2006-10-27  Bastien Nocera  <hadess@hadess.net>

	* configure.in: fix dbus detection (it's dbus-1, not dbus since 2003)
	(Closes: #365387)
	* src/plparse/totem-disc.c: (cd_cache_free): close the dbus connection
	before unref'ing it, as it is a private connection (Closes: #365265)

2006-10-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_stop_play_pipeline):
	  Don't use poll_for_state_change() when stopping, it can lead to
	  deadlocks when called from the bus handler (e.g. after redirect
	  message) and isn't really necessary anyway. (Closes: #361787)

2006-10-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-private.h:
	* src/totem.c: (seek_slider_pressed_cb), (seek_slider_released_cb),
	(totem_action_handle_key_release), (totem_action_handle_key_press):
	  When seeking while playing, go straight back into playing mode after
	  the seek (ie. do full audio scrubbing as well). (Closes: #363699)

2006-10-26  Tim-Philipp Müller  <tim at centricular dot net>
